# rust-chip-8

./: Cargo.toml  README.md
src/: chip8.rs  cli.rs  console.rs  main.rs
src/chip8/: emulation.rs  execution.rs  mod.rs
