[package]
name = "rust-chip-8"
version = "0.1.0"
authors = ["Riccardo Armando Di Prinzio (ricdip)"]
edition = "2021"
description = "A simple Rust implementation of CHIP-8 for fun and learning purposes"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
lazy_static = "1.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
